Fixed overflow inside results list bug.

--- a/index.css
+++ b/index.css
@@ -28,6 +28,11 @@
     display: flex;
 }
 
+.scroll-container {
+    max-height: 75vh;
+    overflow: auto;
+}
+
 .back-btn {
     filter: var(--onBackgroundSVGFilter);
     height: 30px;
@@ -38,17 +43,15 @@ html,
 body {
     padding: 0;
     margin: 0;
-}
-
-html {
-    height: 100%;
+    height: 100vh;
 }
 
 body {
-    min-height: 100%;
+    min-height: 100vh;
     background-color: var(--displayBackground);
     box-sizing: border-box;
     padding: 20px;
+    overflow: auto;
 }
 
 body.grid-container {
@@ -117,13 +120,13 @@ body.grid-container {
     background-color: var(--background);
     border-radius: var(--borderRadius);
     color: var(--onBackgroundText);
-    overflow: hidden;
 }
 
 #currentAccessibleEndpoints.grid-container {
     grid-template-rows: max-content auto;
 }
 
+/* #region Current accessible endpoints top bar */
 #currAccEPTopBar {
     margin: 40px 10px;
     position: sticky;
@@ -155,9 +158,11 @@ body.grid-container {
     text-align: center;
     color: var(--onBackgroundTextInput);
 }
+/* #endregion */
 
 /* #region Current accessible endpoints list (cards) */
 /*TODO: Refactor to be cards*/
+
 #currAccEPList {
     overflow: auto;
 }
